--- a/1101561065_VasilVasilev/public/index.html
+++ b/1101561065_VasilVasilev/public/index.html
@@ -1,81 +1,97 @@
 <!DOCTYPE html>
-<!-- ASSIGN OUR ANGULAR MODULE -->
 <html data-ng-app="fmiFe">
-	<head>
-		<meta charset="urf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1"><!-- Optimize mobile viewport -->
-		<title>Angular SPA</title>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Optimize mobile viewport -->
+        <title>Angular SPA</title>
 
-		<!-- We have to install AngulaJS in this page -->
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
-		
-		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-		
-		<!-- SCROLLS -->
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-		<style type="text/css">
-			html 					{ overflow-y:scroll; }
-			body 					{ padding-top:50px; }
-			#todo-list 				{ margin-bottom:30px; }
-		</style>
-		
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+        <!-- We have to install AngulaJS in this page -->
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
 
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
-		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-		
-		<!-- SPELLS -->
-		<!-- Custom code -->
-		<!-- app.js needs to be included before maincontroller.js -->
-		<script type="text/javascript" src="core.js"></script>
-		<!-- <script type="text/javascript" src="maincontroller.js"></script> -->
-	</head>
+        <!-- SCROLLS -->
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+        <style type="text/css">
+            html 					{ overflow-y:scroll; }
+            body 					{ padding-top:50px;color: #FF8000;
+                                                          background-image: url("img/bg.jpg");}
+            #contact-list 			{ margin-bottom:30px;  }
+            
 
-<!-- SET THE CONTROLLER AND GET ALL TODOS -->
-	<body ng-controller="mainController">
-		<div class="container">
 
-			<!-- HEADER AND TODO COUNT -->
-			<div class="jumbotron text-center">
-				<h1>I'm a Todo-aholic <span class="label label-info">{{ todos.length }}</span></h1>
-			</div>
+        </style>
 
-			<!-- TODO LIST -->
-			<div id="todo-list" class="row">
-				<div class="col-sm-4 col-sm-offset-4">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 
-					<!-- LOOP OVER THE TODOS IN $scope.todos -->
-					<div class="checkbox" ng-repeat="todo in todos">
-						<label>
-							<input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }}
-						</label>
-					</div>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-				</div>
-			</div>
+        <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+        <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 
-			<!-- FORM TO CREATE TODOS -->
-			<div id="todo-form" class="row">
-				<div class="col-sm-8 col-sm-offset-2 text-center">
-					<form>
-						<div class="form-group">
+        <!-- SPELLS -->
+        <!-- Custom code -->
+        <!-- app.js needs to be included before maincontroller.js -->
+        <script type="text/javascript" src="core.js"></script>
+        <!-- <script type="text/javascript" src="maincontroller.js"></script> -->
+    </head>
 
-							<!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
-							<input type="text" class="form-control input-lg text-center" placeholder="I want to buy a puppy that will love me forever" ng-model="formData.text">
-						</div>
+    <!-- SET THE CONTROLLER AND GET ALL contacts -->
+    <body ng-controller="mainController">
+        <div class="container">
 
-						<!-- createToDo() WILL CREATE NEW TODOS -->
-						<button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
-					</form>
-				</div>
-			</div>
+            <!-- HEADER AND CONTACTS COUNT -->
+            <div class="jumbotron text-center">
+                <h1>Simple Phonebook <span class="label label-info">{{ contacts.length}}</span></h1>
+                <h2>Using The MEAN Stack: MongoDB, ExpressJS, AngularJS and Node.js</h2>
+                <h3><a href="http://localhost:8082/">See how it look like on website Click!</a></h3>
+            </div>
 
-		</div>
-	</body>
+            <!-- CONTACTS LIST -->
+            <div id="contact-list" class="row">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Delete</th>
+                            <th>Fname</th>
+                            <th>Lname</th>
+                            <th>Phone</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="contact in contacts">
+                            <td><input type="checkbox" ng-click="deleteContact(contact._id)"></td>
+                            <td>{{ contact.Fname}}</td>
+                            <td>{{ contact.Lname}}</td>
+                            <td>{{ contact.Number}}</td>
+                        </tr>
+                    </tbody>
+                </table>						
+            </div>
+
+            <!-- FORM TO CREATE contacts -->
+            <div id="contact-form" class="row">
+                <div class="col-sm-8 col-sm-offset-2 text-center">
+                    <form>
+                        <div class="form-group">
+
+                            <!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
+                            <input type="text" class="form-control input-lg text-center" placeholder="enter first name" ng-model="formData.Fname">
+                            <input type="text" class="form-control input-lg text-center" placeholder="enter last namer" ng-model="formData.Lname">
+                            <input type="text" class="form-control input-lg text-center" placeholder="enter phone number" ng-model="formData.Number">
+
+                        </div>
+
+                        <!-- createContacts() WILL CREATE NEW contacts -->
+                        <button type="submit" class="btn btn-primary btn-lg" ng-click="createContact()">Add</button>
+                    </form>
+                </div>
+            </div>
+
+        </div>
+    </body>
 </html>
