--- a/1101561063_VentsislavBoiadzhiev/public/index.html
+++ b/1101561063_VentsislavBoiadzhiev/public/index.html
@@ -18,7 +18,7 @@
 		<style type="text/css">
 			html 					{ overflow-y:scroll; }
 			body 					{ padding-top:50px; }
-			#todo-list 				{ margin-bottom:30px; }
+			#reg-list 				{ margin-bottom:30px; }
 		</style>
 		
 		<!-- Optional theme -->
