--- a/1201561019_AneliqIvanova/public/index.html
+++ b/1201561019_AneliqIvanova/public/index.html
@@ -3,30 +3,44 @@
 <head>
 		<meta charset="urf-8" />
 <title>Анелия</title>
+	<head>
+		<meta charset="urf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1"><!-- Optimize mobile viewport -->
 
-		<!-- jQuery-->
+		<!-- We have to install AngulaJS in this page -->
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
+
 		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-
-		<!--Boostrap-->
-		<S!-- Latest compiled and minified CSS -->
+		<!-- SCROLLS -->
+		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+		<style type="text/css">
+			html 					{ overflow-y:scroll; }
+			body 					{ padding-top:50px; }
+			#todo-list 				{ margin-bottom:30px; }
+		</style>
 
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<style type="text/css">
-			html 					{ overflow-y:scroll; }
-			body 					{ padding-top:50px; }
-			#todo-list 				{ margin-bottom:30px; }
-		</style>
-</head>
-<body>
-<div class="container">
 
+		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+
+		<!-- SPELLS -->
+		<!-- Custom code -->
+		<!-- app.js needs to be included before maincontroller.js -->
+		<script type="text/javascript" src="core.js"></script>
+		<!-- <script type="text/javascript" src="maincontroller.js"></script> -->
+	</head>
+
+<!-- SET THE CONTROLLER AND GET ALL TODOS -->
+	<body  background="1.jpg" ng-controller="mainController">
+		<div class="container">
 <nav class="roll">
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -37,48 +51,51 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Анелия Иванова</a>
+           <a class="navbar-brand" href="index.html">Начало</a>
+		   <a class="navbar-brand" href="smile.html">Усмивка</a>
         </div>
       
           </form>
         </div><!--/.navbar-collapse -->
       </div>
 </nav>
+			<!-- HEADER AND TODO COUNT -->
+			<div class="jumbotron text-center">
+				<h1>Телефонен указател <span class="label label-info">{{ todos.length }}</span></h1>
+			</div>
 
- <div class="jumbotron">
-      <div class="container">
-        <h1 align="center">Здравейте!</h1>
-		<h5 align="center">Една усмивка може да доведе до смях, а смеха може да направи човека щастлив.</h5>
-       </div>
-    </div>
+			<!-- TODO LIST -->
+			<div id="todo-list" class="row">
+				<div class="col-sm-4 col-sm-offset-4">
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Усмивка</h2>
-          <p>Ако някой не ви се усмихва, бъдете любезни и го дарете с усмивка. Никой не се нуждае повече от усмивка, отколкото този, който не може да се усмихва на другите. — Тензин Гяцо</p>
-		  <p>Ако се събудиш с усмивка, денят ти ще бъде усмихнат. — Венцеслав Константинов</p>
-		  <p>Децата се учат да се усмихват от родителите си. — Шиничи Сузуки</p>
-          <p><a class="btn btn-default" href="#" role="button">Виж още &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Смях</h2>
-          <p>Смехът е звучно изразяване на веселие, радост, забава или вътрешно чувство на щастие и удоволствие, придружено от характерни изражения на лицето и дори гримаси.</p>
-		  <p><a class="btn btn-default" href="#" role="button">Виж още &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Щастие</h2>
-          <p>Щастието осмисля живота ни, придава му реалност, без него всичко е привидно, без същност. Според една сентенция да си щастлив значи да си докоснат и воден от Бога. Затова Щастието е свързано със смисъла на живота.</p>
-          <p><a class="btn btn-default" href="#" role="button">Виж още &raquo;</a></p>
-        </div>
-      </div>
-      <hr>
-      <footer>
-        <p>&copy; ^_^</p>
-		
-      </footer>
-    </div> <!-- /container -->
+					<!-- LOOP OVER THE TODOS IN $scope.todos -->
+					<div class="checkbox" ng-repeat="todo in todos">
+						<label>
+							<input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }}
+							<input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.number }}
+						</label>
+					</div>
 
-  </body>
+				</div>
+			</div>
+
+			<!-- FORM TO CREATE TODOS -->
+			<div id="todo-form" class="row">
+				<div class="col-sm-8 col-sm-offset-2 text-center">
+					<form>
+						<div class="form-group">
+
+							<!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
+							<input type="text" class="form-control input-lg text-center" placeholder="Име" ng-model="formData.text">
+							<input type="text" class="form-control input-lg text-center" placeholder="Телефонен номер" ng-model="formData.number">
+						</div>
+
+						<!-- createToDo() WILL CREATE NEW TODOS -->
+						<button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Добави</button>
+					</form>
+				</div>
+			</div>
+
+		</div>
+	</body>
 </html>
