--- a/1201561074_NikolayIvanov/MEAN/public/index.html
+++ b/1201561074_NikolayIvanov/MEAN/public/index.html
@@ -4,23 +4,19 @@
 	<head>
 		<meta charset="urf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"><!-- Optimize mobile viewport -->
-		<title>Cool AddressBook</title>
+		<title>An address book</title>
 
 		<!-- We have to install AngulaJS in this page -->
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
-		
+
 		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-		
+
 		<!-- SCROLLS -->
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-		<style type="text/css">
-			html 					{ overflow-y:scroll; }
-			body 					{ padding-top:50px; }
-			#address-list 				{ margin-bottom:30px; }
-		</style>
-		
+		<link rel="stylesheet" href="style.css">
+
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 
@@ -29,63 +25,85 @@
 
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-		
+
 		<!-- SPELLS -->
 		<!-- Custom code -->
 		<!-- app.js needs to be included before maincontroller.js -->
 		<script type="text/javascript" src="core.js"></script>
 		<!-- <script type="text/javascript" src="maincontroller.js"></script> -->
-		<link rel="stylesheet" href="style.css" type="text/css">
 	</head>
 
 <!-- SET THE CONTROLLER AND GET ALL TODOS -->
 	<body ng-controller="mainController">
 		<div class="container">
 
-			<!-- HEADER AND ADDRESS COUNT -->
+			<!-- HEADER AND TODO COUNT -->
 			<div class="jumbotron text-center">
-				<h1>Not a bad address book<span class="label label-info">{{ addressBook.length }}</span></h1>
+				<h1>Not a bad address book <span class="label label-info">{{ addressBook.length }}</span></h1>
 			</div>
-			<table id="content-table" class="table table-striped">
-			<thead>
-				<tr>
-					<th>First Name</th>
-					<th>Last Name</th>
-					<th>Address</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat="entry in entries">
-					<td >
-							{{ addressBook.fName }}
-					</td>
-					<td >
-							{{ addressBook.fName }}
-					</td>
-					<td >
-							{{ addressBook.address }} 
-					</td>
-					<td>
-						<input type="button" class="btn btn-danger" ng-click="deleteAddress(addressBook._id)" value="delete" />
-					</td>
-				</tr>
-			</tbody>
-			</table>
 
-			<!-- FORM TO CREATE ADDRESSES -->
-			<div id="todo-form" class="row">
-				<div class="col-sm-8 col-sm-offset-2 text-center">
-					<form>
-						<div class="form-group">
+			<!-- TODO LIST -->
+			<div id="address-list" class="row">
+				<div class="col-sm-4 col-sm-offset-4">
 
-							<!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
-							<input type="text" required="required" class="form-control input-lg text-center" placeholder="first name" ng-model="formData.fName">
-							<input type="text" required="required" class="form-control input-lg text-center" placeholder="last name" ng-model="formData.lName">
-							<input type="text" required="required" class="form-control input-lg text-center" placeholder="address" ng-model="formData.address">
+					<!-- LOOP OVER THE TODOS IN $scope.todos -->
+					<table id="content-table" class="table table-striped">
+						<thead>
+							<tr>
+								<th>First Name</th>
+								<th>Last Name</th>
+								<th>Address</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="address in addressBook">
+								<td >
+										{{ address.fName }}
+								</td>
+								<td >
+										{{ address.lName }}
+								</td>
+								<td >
+										{{ address.addressUser }}
+								</td>
+								<td>
+									<input type="button" class="btn btn-danger" ng-click="deleteAddress(address._id)" value="Delete" />
+								</td>
+							</tr>
+						</tbody>
+					</table>					
+				</div>
+			</div>
+
+			<!-- FORM TO CREATE TODOS -->
+			<div id="address-form" class="row">
+				<div class="col-sm-12 col-sm-offset-2 text-center">
+										
+					<form class="form-horizontal" role="form">
+					  <div class="form-group">
+						<label for="inputfName" class="col-sm-2 control-label">First Name </label>
+						<div class="col-sm-10">
+						  <input type="text" class="form-control input-lg text-center" id="inputfName" placeholder="First name" ng-model="formData.fName">
 						</div>
-
-						<!-- createAddress() WILL CREATE NEW ADDRESS -->
-						<button type="submit" class="btn btn-primary btn-lg" ng-click="createAddress()">Add</button>
+					  </div>
+					  <div class="form-group">
+						<label for="inputlName" class="col-sm-2 control-label">Last Name </label>
+						<div class="col-sm-10">
+						  <input type="text" class="form-control input-lg text-center" id="inputlName" placeholder="Last name" ng-model="formData.lName">
+						</div>
+					  </div>
+					  <div class="form-group">
+						<label for="inputaddress" class="col-sm-2 control-label">Address</label>
+						<div class="col-sm-10">
+						  <input type="text" class="form-control input-lg text-center" id="inputaddress" placeholder="Address" ng-model="formData.addressUser">
+						</div>
+					  </div>
+					  
+					  <div class="form-group">
+						<div class="col-sm-offset-1 col-sm-5">
+						  <button type="submit" class="btn btn-warning btn-lg" ng-click="createAddress()"><span class="glyphicon glyphicon-pencil"></span> Add</button>
+						</div>
+					  </div>
 					</form>
 				</div>
 			</div>
